Button Borders & Forward Button Fix
Put 1px solid Border on right, left & Bottom of btn-default so it feels
more like Yosemite.

Forward button is now 1px to the right of the back button (Similar to
Safari) & is no longer using .disabled class (Can still use it, just
doesn't look as native as .btn-disabled)

--- a/yosemite/theme/css/theme.css
+++ b/yosemite/theme/css/theme.css
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
+@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400);
 
 body, html {
     font-family: 'Open Sans', 'sans-serif';
@@ -57,7 +58,8 @@ body, html {
 }
 
 .program-name {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
 }
 
 /* Dropdown Menus */
@@ -198,15 +200,24 @@ body, html {
     height: 24px;
     background-color:#ffffff;
     box-shadow: 0px 1.5px 0.25px 0.00px rgba(16, 16, 16, 0.2);
+    border-right: 1px solid #dbdbda;
+    border-left: 1px solid #dbdbda;
+    border-bottom: 1px solid #dbdbda;
     border-radius: 4px;
+    z-index: 3;
 }
 
 .btn-disabled {
     margin-top: 6px;
+    margin-left: -3px;
     height: 24px;
     background-color: #ffffff;
-    box-shadow: 0px 0.5px 0px 0.00px rgba(16, 16, 16, 0.35);
+    box-shadow: 0px 1.5px 0.25px 0.00px rgba(16, 16, 16, 0.2);
+    border-right: 1px solid #dbdbda;
+    border-left: 1px solid #dbdbda;
+    border-bottom: 1px solid #dbdbda;
     border-radius: 4px;
+    z-index: 2;
 }
 
 .btn {
